Update POST and PUT APIs for memebers in Swagger documentation
